fix some contrast issues, about the quote txt

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -4,12 +4,17 @@
 // colours
 $blue: #3b81ff;
 
+body {
+	background-color: #000;
+}
+
 .sh-experts-topbox {
 	background-color: #000;
 	color: #FFF;
 	font-family: 'OpenSans-Extrabold', arial, sans-serif;
 	text-align: center;
 	position: relative;
+	opacity: 0;
 
 	&.mouseover {
 		cursor: pointer !important;
@@ -113,6 +118,7 @@ $blue: #3b81ff;
 			line-height: 1.2em;
 			color: #3b81ff;
 			font-style: italic;
+			background-color: rbga(0, 0, 0, 0.8);
 
 			&:before,
 			&:after {
@@ -236,7 +242,6 @@ $blue: #3b81ff;
 	.mobile,
 	.tablet {
 		display: none;
-		opacity: 0;
 	}
 
 	.mobile {
@@ -266,13 +271,6 @@ $blue: #3b81ff;
 					margin-top: 80px;
 				}
 			}
-		}
-
-		&.bg-static {
-			background: url(../img/bg-circles-mobile-static.png?201512011208);
-			background-size: 90%;
-			background-repeat: no-repeat;
-			background-position: center center;
 		}
 	}
 
@@ -314,6 +312,23 @@ $blue: #3b81ff;
 	}
 
 	@media only screen and (max-width: 667px), (max-device-width: 667px) {
+		&:before {
+			content: "";
+			background: url(../img/bg-circles-mobile-static.png?201512011121);
+			background-repeat: no-repeat;
+			background-position: center center;
+			background-size: contain;
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+		}
+
+		.bg-static {
+			background-image: none;
+		}
+
 		.mobile ~ .experts-down-arrow,
 		.tablet ~ .experts-down-arrow {
 			display: none;
@@ -339,10 +354,13 @@ $blue: #3b81ff;
 
 			p {
 				text-align: left;
+				background-color: rgba(0, 0, 0, 1);
 			}
 		}
 
 		.experts-list {
+			padding-bottom: 60px;
+
 			li {
 				&:nth-child(even) {}
 			}
